fix: Bug with solution view on mobiles with height

--- a/src/app/shared/components/carousel/carousel.component.scss
+++ b/src/app/shared/components/carousel/carousel.component.scss
@@ -90,6 +90,7 @@
     &__controller {
       display: flex;
       justify-content: center;
+      margin-bottom: 20px;
     }
 
     &__content {
@@ -122,6 +123,10 @@
     &__slide-image {
       width: 100%;
       height: 240px;
+    }
+
+    &__controller {
+      margin-bottom: 50px;
     }
   }
 }
