--- a/src/app/views/solution/solution.component.scss
+++ b/src/app/views/solution/solution.component.scss
@@ -1,5 +1,8 @@
+@import "src/assets/styles/dimensions";
+
 .solution {
   width: 100%;
+  height: 100%;
   margin: 50px 0;
 
   &__title {
@@ -13,14 +16,34 @@
   }
 
   &__tab-row {
-    margin: 10px 0;
+    margin: 20px 0;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
   }
 
+  &__cell {
+    margin: 5px 0;
+    flex: 0 0 25%;
+  }
+
   &__tab-image {
-    width: 20%;
-    margin: 5px;
+    width: 95%;
+    height: 100%;
+    margin: 0 auto;
+    object-fit: cover;
   }
 }
+
+@media screen and (max-width: $laptop){
+  .solution {
+    &__cell {
+      flex: 0 0 50%;
+      display: flex;
+      justify-content: center;
+      margin: 7px 0;
+    }
+  }
+}
+
